--- a/ui/narrative/methods/import_assembly_fasta_file/display.yaml
+++ b/ui/narrative/methods/import_assembly_fasta_file/display.yaml
@@ -37,6 +37,14 @@ parameters :
         long-hint  : |
             Recognized extensions for the FASTA input file are .fasta, .fna, or .fa
 
+    min_contig_length :
+        ui-name : |
+            Minimum contig length
+        short-hint : |
+            Contigs shorter than this length will be filtered out
+        long-hint  : |
+            Contigs shorter than this value will be filtered out. Try larger value if upload fails.
+
     outputObject :
         ui-name : |
             Assembly name
